--- a/config/sync/language/fr/views.view.tmgmt_job_messages.yml
+++ b/config/sync/language/fr/views.view.tmgmt_job_messages.yml
@@ -21,6 +21,8 @@ display:
       fields:
         created:
           label: Créé
+        name:
+          label: Nom
       arguments:
         tjid:
           exception:
