--- a/config/sync/language/fr/views.view.blogs.yml
+++ b/config/sync/language/fr/views.view.blogs.yml
@@ -10,7 +10,7 @@ display:
       header:
         area:
           content:
-            value: "<p>Welcome to our blog, your go-to resource for career opportunities in Yukon, Canada. Explore insightful articles, expert advice, and inspiring stories from individuals making their mark in various industries across the region. Join us as we delve into the diverse and exciting world of Yukon's job market! In each post, we aim to provide valuable insights, tips, and resources to help you navigate the job market, discover new career paths, and make informed decisions about your professional journey. From in-depth guides on industry trends to personal narratives from local professionals, our blog covers a wide range of topics to cater to your interests and aspirations.</p>"
+            value: "<p>Welcome to our blog, your go-to resource for career opportunities in Yukon, Canada. Explore insightful articles, expert advice, and inspiring stories from individuals making their mark in various industries across the region. Join us as we delve into the diverse and exciting world of Yukon's job market!</p><p>In each post, we aim to provide valuable insights, tips, and resources to help you navigate the job market, discover new career paths, and make informed decisions about your professional journey. From in-depth guides on industry trends to personal narratives from local professionals, our blog covers a wide range of topics to cater to your interests and aspirations.</p>"
             format: full_html
   blog_list:
     display_options:
